--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,7 +5,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .container {
-  max-width: 1200px;
+  max-width: 1280px;
 
   margin: 0 auto;
 }
@@ -18,7 +18,6 @@
   cursor: pointer;
   text-decoration: none;
 }
-
 .icon-buttons {
   background-color: transparent;
   border: none;
@@ -27,4 +26,9 @@
 .icon-buttons > * {
   font-size: 25px;
   color: #7e7e7e;
+}
+.row-heading {
+  font-size: 20px;
+  font-weight: 900;
+  margin: 25px 0 15px;
 }
