--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -32,3 +32,18 @@
   font-weight: 900;
   margin: 25px 0 15px;
 }
+.hr {
+  margin: 15px 0;
+  background-color: #e9e9e9;
+  width: 100%;
+  height: 0.5px;
+}
+.sm {
+  margin: 15px 0;
+}
+.mm {
+  margin: 30px 0;
+}
+.lm {
+  margin: 60px 0;
+}
