--- a/src/pages/product/productPage.css
+++ b/src/pages/product/productPage.css
@@ -38,14 +38,16 @@
 /* PRODUCT */
 .product-showcase {
   display: flex;
-  width: 100%;
+  width: 90%;
   height: 500px;
-  margin-bottom: 100px;
+  gap: 30px;
+  /* margin-bottom: 100px; */
+  margin: 0 auto 100px;
 }
 .product-showcase > div {
   padding: 30px 30px;
   width: 100%;
-  flex: 0 0 50%;
+  flex: 0 0 45%;
 }
 .product-image-details {
   display: flex;
@@ -60,4 +62,128 @@
   /* display: block; */
   width: 80%;
   margin: 0 auto;
+}
+
+/** product-price-details **/
+.product-price-details {
+  margin: 30px 0;
+  border: #5f5f5f80 0.5px solid;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.size-container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.product-price-details h6 {
+  font-size: 16px;
+  font-size: 600;
+  color: #5f5f5f;
+}
+.sized {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+.sized > input {
+  display: none;
+}
+.sized > label {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: #242424;
+  cursor: pointer;
+  padding: 3px 10px;
+  border: 0.5px solid #eee;
+  width: 50px;
+}
+.sized input[type="radio"]:checked + label {
+  background-color: rgb(228, 228, 228);
+}
+
+.stock-container {
+  display: flex;
+
+  align-items: center;
+  gap: 10px;
+  color: #004900;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.addToCart-container {
+  display: flex;
+  gap: 15px;
+}
+.counter-container {
+  display: flex;
+  height: 45px;
+  border: 0.5px solid #0a0a0a;
+  width: min-content;
+  padding: 5px 10px;
+  border-radius: 3px;
+  align-items: center;
+  justify-content: center;
+}
+.counter-container button {
+  background-color: transparent;
+  border: none;
+  font-weight: 900;
+  font-size: 16px;
+  transform: translateY(3px);
+  cursor: pointer;
+}
+.counter-container > input {
+  border: none;
+  width: 50px;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+.counter-container > input:focus {
+  outline: none;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.btn-price {
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  padding: 0 30px;
+  height: 45px;
+  border: none;
+}
+#addToCard-btn {
+  background-color: #000000;
+}
+#buyNow-btn {
+  background-color: #004900;
+  width: 200px;
+}
+.share-container {
+  display: flex;
+  gap: 20px;
+  margin-top: auto;
+}
+.social-icons {
+  font-size: 18px;
+  color: #5f5f5f;
+}
+.social-icons > svg {
+  cursor: pointer;
+  margin-right: 15px;
 }
