--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,6 +1,42 @@
 .header {
   width: 100%;
+  position: relative;
+  z-index: -1;
 }
 .header-banner {
   width: 100%;
+}
+.cta-home {
+  background-color: black;
+  padding: 10px 30px !important;
+  border-radius: 3px;
+  cursor: pointer;
+  position: absolute;
+  left: 9%;
+  top: 60%;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  padding: 0 30px;
+
+  border: none;
+}
+
+@media only screen and (max-width: 1280px) {
+}
+@media only screen and (max-width: 992px) {
+}
+@media only screen and (max-width: 768px) {
+  .cta-home {
+    background-color: black;
+    padding: 5px 15px !important;
+    border-radius: 3px;
+    cursor: pointer;
+    position: absolute;
+    left: 7vw;
+    top: 60%;
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 400px) {
 }
