--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+body {
+  padding-top: 65px;
+}
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -57,4 +60,29 @@
 }
 button {
   cursor: pointer;
+}
+
+/* @media only screen and (max-width: 1280px) {
+}
+@media only screen and (max-width: 992px) {
+}
+@media only screen and (max-width: 768px) {
+}
+@media only screen and (max-width: 400px) {
+} */
+
+@media only screen and (max-width: 1280px) {
+  .container {
+    width: 95%;
+  }
+}
+@media only screen and (max-width: 992px) {
+}
+
+@media only screen and (max-width: 768px) {
+  .center-container {
+    flex-direction: column-reverse;
+  }
+}
+@media only screen and (max-width: 400px) {
 }
