360 Image added fix

--- a/src/pages/product/productPage.css
+++ b/src/pages/product/productPage.css
@@ -61,10 +61,11 @@
 }
 .image-container {
   /* display: block; */
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 .image-container > img {
   /* display: block; */
