--- a/src/components/css/Slider.css
+++ b/src/components/css/Slider.css
@@ -4,6 +4,8 @@
   left: 0;
   z-index: 2;
   width: 100%;
+  height: 0;
+  scale: 1.5;
 }
 .image-switcher {
   position: absolute;
@@ -38,3 +40,7 @@
 .image-switcher input[type="checkbox"]:checked + label {
   background-color: rgb(204, 204, 204);
 }
+/* .slider-container {
+  height: 500px;
+  scale: 2;
+} */
